packages/forge-dsl/fixtures/errors/e21-bad-note.fable
// expect: FORGE108
-> go

=== go ===
You recall [[The Unfinished Ledger
-> END
